Fixed a bug with dark mode support on windows

--- a/resources/css/admin/app.css
+++ b/resources/css/admin/app.css
@@ -34,6 +34,7 @@ a {
 
 .btn-primary {
     background-color: rgb(45, 35, 222);
+    color: white;
 }
 
 .btn-primary:hover,
